new logo formatting

--- a/index.html
+++ b/index.html
@@ -58,24 +58,25 @@
 
 <div class="wrapper">
 
-<p class="logotext desktop">FASHION & LIFESTYLE PHOTOGRAPHY</p>
-
-<a href="#start">
-    <div class="logoline desktop">
-        <h2>KINA'STUDIO</h2>
-        <h4>STUTTGART</h4>
-    </div>
-    <!--<img class="logo desktop" src="images/kinastudio.png"/>-->
-</a>
-
-    <div class="mainnav-wrapper transp">
-        <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
-            <p class="logotext mobile">FASHION & LIFESTYLE</p>
-            <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
-            <div class="logoline logoicon">
+    <div class="logo-wrapper logo-wrapper-desktop block bgblack header desktop">
+        <a href="#start">
+            <div class="logoline">
                 <h2>KINA'STUDIO</h2>
                 <h4>STUTTGART</h4>
             </div>
+        </a>
+    </div>
+
+    <div class="mainnav-wrapper transp">
+        <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
+            <!--<p class="logotext mobile">FASHION & LIFESTYLE</p>-->
+            <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
+            <a href="#start">
+                <div class="logoline logoicon">
+                    <h2>KINA'STUDIO</h2>
+                    <h4>STUTTGART</h4>
+                </div>
+            </a>
             <!--<a class="logoicon" href="#start"><img class="logo" src="images/kinastudio.png"/></a>-->
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
