--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="logo-wrapper logo-wrapper-desktop block bgblack header desktop">
         <a href="#start">
             <div class="logoline">
-                <h2>KINA'STUDIO</h2>
+                <h2>#KINASTUDIO</h2>
                 <h4>STUTTGART</h4>
             </div>
         </a>
@@ -73,7 +73,7 @@
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
             <a href="#start">
                 <div class="logoline logoicon">
-                    <h2>KINA'STUDIO</h2>
+                    <h2>#KINASTUDIO</h2>
                     <h4>STUTTGART</h4>
                 </div>
             </a>
