--- a/index.html
+++ b/index.html
@@ -58,30 +58,18 @@
 
 <div class="wrapper">
 
-    <div class="logo-wrapper logo-wrapper-desktop block bgblack header desktop">
-        <a href="#start">
-            <div class="logoline">
-                <h2>#KINASTUDIO</h2>
-                <h4>STUTTGART</h4>
-            </div>
-        </a>
-    </div>
+    <!--<div class="logo-wrapper logo-wrapper-desktop block bgblack header desktop">
+        <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio8.png"/></a>
+    </div>-->
 
     <div class="mainnav-wrapper transp">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
-            <!--<p class="logotext mobile">FASHION & LIFESTYLE</p>-->
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
-            <a href="#start">
-                <div class="logoline logoicon">
-                    <h2>#KINASTUDIO</h2>
-                    <h4>STUTTGART</h4>
-                </div>
-            </a>
-            <!--<a class="logoicon" href="#start"><img class="logo" src="images/kinastudio.png"/></a>-->
+            <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio8.png"/></a>
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
-            <!--<a href="#start" class="menulogo-wrapper"><img class="menulogo" src="images/kinastudio.png"/></a>-->
+            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kinastudio8.png"/></a>
             <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
             <a href="#nav-business" class="">BUSINESS LOOKS</a>
             <a href="hochzeit" class="weddinglink">Hochzeit</a>
