--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
 
 
     <div id="contact"></div>
-    <div class="block headline">
+    <div class="headline">
         <h2 class="">KONTAKT</h2>
     </div>
 
-    <div class="block">
-        <div class="contacts">
-            <div style="float:left; width:49%">
+    <div class="block bgblack">
+        <div class="block contacts">
+            <div style="float:left; width:50%">
                 <p class="icon icon-mail"></p>
                 <h4 class="middletext">EMAIL: </h4>
                 <p class="biggertext"><a href="mailto:info@kina.studio">info@kina.studio</a></p>
@@ -261,23 +261,16 @@
                 <p class="biggertext"><a href="tel:+49 (173) 429 0514" data-rel="external">+49 (173) 429 0514</a></p>
             </div>
         </div>
-    </div>
-
-    <div class="block bgblack">
-        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
-        <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
-        <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
-    </div>
-
-
-
-
-    <div class="topline"></div>
-
-    <div class="block">
-        <a class="link" href="privacy.html" target="_blank">DATENSCHUTZ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="link" href="imprint.html" target="_blank">IMPRESSUM</a>
-        <p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
+        <div class="block social">
+            <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton" src="images/facebook-white.png"/></a>
+            <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton" src="images/instagram-white.png"/></a>
+            <a href="https://500px.com/kinastudio" target="_blank"><img class="socialbutton" src="images/500px-white.png"/></a>
+        </div>
+        <div class="block footerlinks">
+            <a class="link" href="privacy.html" target="_blank">DATENSCHUTZ</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="link" href="imprint.html" target="_blank">IMPRESSUM</a>
+            <p style="text-align: center;">&copy; 2009-2017 KINA.studio. Stuttgart city.</p>
+        </div>
     </div>
 </div>
 
