--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         <h4 class="widetext">GET INSPIRED</h4>
     </div>
 
-    <div class="block">
+    <div class="block bgnude">
         <div class="instagram-kinastudio-fashion"></div>
-        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -171,9 +171,9 @@
         <h2 class="">BUSINESS LOOKS</h2>
         <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
     </div>
-    <div class="block">
+    <div class="block bggrey">
         <div class="instagram-kinastudio-business"></div>
-        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -198,7 +198,7 @@
     </div>
     <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
-        <a class="blackbutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
@@ -219,7 +219,7 @@
 
     <div class="headline">
         <h2 class="">PHOTOGRAPHY</h2>
-        <h4 class="widetext">by kina studio</h4>
+        <h4 class="widetext bgnude">by kina studio</h4>
     </div>
 
     <div class="block whitebox">
