--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         </div>
         <div class="mainnav">
             <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kinastudio15.png"/></a>
-            <a href="#nav-fashion" class="">FASHION & BEAUTY</a>
-            <a href="#nav-business" class="">BUSINESS LOOKS</a>
-            <a href="hochzeit" class="weddinglink">Hochzeit</a>
-            <a href="#nav-lifestyle" class="">LIFESTYLE</a>
-            <a href="#info" class="">INFO</a>
-            <a href="#contact" class="">KONTAKT</a>
+            <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
+            <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
+            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
+            <a href="#nav-lifestyle" class="menuitem">LIFESTYLE</a>
+            <a href="#info" class="menuitem">INFO</a>
+            <a href="#contact" class="menuitem">KONTAKT</a>
         </div>
 
 <!--
