--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <div class="mainnav-wrapper transp">
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
-            <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio13.png"/></a>
+            <a class="logoicon" href="#start"><img class="logo" src="images/kina_new.png"/></a>
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kinastudio15.png"/></a>
+            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kina_new.png"/></a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
             <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
