--- a/test.html
+++ b/test.html
@@ -58,8 +58,9 @@
 
 <div class="wrapper">
 
-    <p class="headertext">BLACK BALKEN</p>
+    
     <div class="mainnav-wrapper transp">
+        <p class="headertext">BUSINESS & LIFESTYLE FOTOGRAFIE</p>
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
             <a class="logoicon" href="#start"><img class="logo" src="images/kina_new4.png"/></a>
