--- a/index.html
+++ b/index.html
@@ -58,24 +58,22 @@
 
 <div class="wrapper">
 
-    <!--<div class="logo-wrapper logo-wrapper-desktop block bgblack header desktop">
-        <a class="logoicon" href="#start"><img class="logo" src="images/kinastudio8.png"/></a>
-    </div>-->
-
+    
     <div class="mainnav-wrapper transp">
+        <p class="headertext">BUSINESS & LIFESTYLE FOTOGRAFIE</p>
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
-            <a class="logoicon" href="#start"><img class="logo" src="images/kina_new.png"/></a>
+            <a class="logoicon" href="#start"><img class="logo" src="images/kina_new4.png"/></a>
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kina_new.png"/></a>
+            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kina_new4.png"/></a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
-            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
             <a href="#nav-lifestyle" class="menuitem">LIFESTYLE</a>
             <a href="#info" class="menuitem">INFO</a>
             <a href="#contact" class="menuitem">KONTAKT</a>
+            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
         </div>
 
 <!--
