--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kina_new4.png"/></a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
+            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
             <a href="#nav-lifestyle" class="menuitem">LIFESTYLE</a>
             <a href="#info" class="menuitem">INFO</a>
             <a href="#contact" class="menuitem">KONTAKT</a>
-            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
         </div>
 
 <!--
@@ -194,7 +194,7 @@
         <h2 class="">LIFESTYLE</h2>
         <h4 class="widetext">MORE INSPIRATION</h4>
     </div>
-    <div class="block">
+    <div class="block bggrey">
         <div class="instagram-kinastudio-lifestyle"></div>
         <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
             auf Instagram ></a>
