--- a/imprint.html
+++ b/imprint.html
@@ -47,7 +47,7 @@ Pappelweg. 4<br />
 71229 Leonberg
 </p>
 <h2>Kontakt:</h2>
-<p>Telefon:+4917687416078</p>
+<p>Telefon:+49 (173) 429 0514</p>
 <p>E-Mail: info@kina.studio</p>
 <h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h2>
 <p>Kyryl Nadobnykh<br />
