--- a/index.html
+++ b/index.html
@@ -220,10 +220,11 @@
         <h4 class="widetext bgnude">by kina studio</h4>
     </div>
 
-    <div class="block whitebox">
+    <div class="block whitebox infobox">
+
+        
 
         <h4>LIFESTYLE. FASHION. BUSINESS.</h4>
-
         <p class="info">Als Partner von KINA.studio entdecken Sie viele neue Möglichkeiten,
             Ihre Produkte durch Fotografie und Video für Ihre Kunden interessanter und attraktiver zu machen.
             Erfreuen Sie Ihre Kunden mit neuen Fotos für Ihre Produkte oder schöne Portraits für Ihre Mitarbeiter.
