--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div class="wrapper">
 
     
-    <div class="mainnav-wrapper transp">
+    <div class="mainnav-wrapper">
         <p class="headertext">BUSINESS & LIFESTYLE FOTOGRAFIE</p>
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
