--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -62,13 +62,13 @@
     <p class="welcomerow desktop">Willkommen bei kina.studio - Professionelle Fotografie für den schönsten Tag Ihres Lebens.</p>
 
     <div class="logo-wrapper logo-wrapper-desktop block header desktop">
-        <img class="logo" src="../images/kina-black.png"/>
+        <img class="logo" src="../images/kina_new5-black.png"/>
     </div>
 
     <div class="mainnav-wrapper">
         <div class="logo-wrapper logo-wrapper-mobile block bgwhite transp header mobile">
             <a class="menuicon" href="">= MENU</a>
-            <a href="#start"><img class="logo" src="../images/kina-black.png"/></a>
+            <a href="#start"><img class="logo" src="../images/kina_new5-black.png"/></a>
         </div>
         <div class="mainnav">
             
