--- a/imprint.html
+++ b/imprint.html
@@ -25,12 +25,12 @@
 <div id="start" class="wrapper">
     
     <div class="block bgblack header mobile">
-        <img class="logo" src="images/kina-white.png"/>
+        <img class="logo" src="images/kina_new5.png"/>
     </div>
     
     <div class="block header desktop">
         <p style="font-size: 12px; margin:5px;">Willkommen bei kina.studio - Dienstleister für Lifestyle und Business Fotografie. </p>
-        <img class="logo" src="images/kina-black.png"/>
+        <img class="logo" src="images/kina_new5-black.png"/>
     </div>
 
     <div class="block headline">
