--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h4 class="widetext">GET INSPIRED</h4>
     </div>
 
-    <div class="block bgnude">
+    <div class="block">
         <div class="instagram-kinastudio-fashion"></div>
         <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_fashion/" target="_blank">Mehr
             auf Instagram ></a>
@@ -169,7 +169,7 @@
         <h2 class="">BUSINESS LOOKS</h2>
         <h4 class="widetext">LIFESTYLE IM GESCHÄFT</h4>
     </div>
-    <div class="block bgbordertop">
+    <div class="block">
         <div class="instagram-kinastudio-business"></div>
         <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_business/" target="_blank">Mehr
             auf Instagram ></a>
@@ -194,7 +194,7 @@
         <h2 class="">LIFESTYLE</h2>
         <h4 class="widetext">MORE INSPIRATION</h4>
     </div>
-    <div class="block bgbordertop">
+    <div class="block">
         <div class="instagram-kinastudio-lifestyle"></div>
         <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_lifestyle/" target="_blank">Mehr
             auf Instagram ></a>
