--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a class="contacticon" href="#contact"><img src="images/contacticon.png"/></a>
         </div>
         <div class="mainnav">
-            <a href="#start" class="menulogo-wrapper"><img class="logo menulogo" src="images/kina_new5-black.png"/></a>
+            <a href="#start" class="desktoplogo-wrapper"><img class="logo desktoplogo" src="images/kina_new5-black.png"/></a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
             <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
