--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </div>
         <div class="mainnav">
             <a href="#start" class="desktoplogo-wrapper"><img class="logo desktoplogo" src="images/kina_new5-black.png"/></a>
+            <a href="#nav-light" class="menuitem">LOOKING FOR LIGHT</a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
             <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
@@ -137,11 +138,38 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
+    <div id="nav-light"></div>
+
+    <div class="headline">
+        <h2 class="">LOOKING FOR LIGHT</h2>
+        <h4 class="widetext">AUF DER SUCHE NACH LICHT</h4>
+    </div>
+
+    <div class="block bgblack">
+        <div class="instagram-kinastudio-light"></div>
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_light/" target="_blank">Mehr
+            auf Instagram ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-light').instagramElement({
+            mode: 'tag',
+            tag: 'kinastudio_light',
+            userID: '2066076364',
+            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 12,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+
+
+
     <div id="nav-fashion"></div>
 
     <div class="headline">
         <h2 class="">FASHION & BEAUTY</h2>
-        <h4 class="widetext">GET INSPIRED</h4>
+        <h4 class="widetext">STUDIOLICHT</h4>
     </div>
 
     <div class="block">
