--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <div class="headline">
         <h2 class="">LOOKING FOR LIGHT</h2>
-        <h4 class="widetext">AUF DER SUCHE NACH LICHT</h4>
+        <h4 class="widetext">ON LOCATION SHOOTS</h4>
     </div>
 
     <div class="block bgblack">
