--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h4 class="widetext">ON LOCATION SHOOTS</h4>
     </div>
 
-    <div class="block bgblack">
+    <div class="block">
         <div class="instagram-kinastudio-light"></div>
         <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_light/" target="_blank">Mehr
             auf Instagram ></a>
