--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     
     <div class="mainnav-wrapper">
-        <p class="headertext">BUSINESS & LIFESTYLE FOTOGRAFIE</p>
+        <p class="headertext">LIFESTYLE & BUSINESS FOTOGRAFIE</p>
         <div class="logo-wrapper logo-wrapper-mobile block bgblack header mobile">
             <a class="menuicon" href=""><img src="images/menuicon.png"/></a>
             <a class="logoicon" href="#start"><img class="logo" src="images/kina_new5.png"/></a>
