--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
         </div>
         <div data-u="slides" class="slider-slides" style="">
 
+
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-fashion">
+                    <img data-u="image" src="photos/slides/00.jpg"/>
+                </a>
+            </div>
+
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-fashion">
                     <img data-u="image" src="photos/slides/01.jpg"/>
