--- a/hochzeit/index.html
+++ b/hochzeit/index.html
@@ -218,7 +218,7 @@
     </div>
 
     <div class="block bgblack">
-        <a href="https://www.facebook.com/www.kina.studio" target="_blank"><img class="socialbutton"
+        <a href="https://www.facebook.com/kinastudio.stuttgart/" target="_blank"><img class="socialbutton"
                                                                                 src="../images/facebook-white.png"/></a>
         <a href="https://www.instagram.com/kina.studio/" target="_blank"><img class="socialbutton"
                                                                               src="../images/instagram-white.png"/></a>
