--- a/index.html
+++ b/index.html
@@ -98,8 +98,14 @@
 
 
             <div data-p="225.00" style="display: none;">
-                <a href="#nav-fashion">
+                <a href="#nav-light">
                     <img data-u="image" src="photos/slides/00.jpg"/>
+                </a>
+            </div>
+
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-fashion">
+                    <img data-u="image" src="photos/slides/01.jpg"/>
                 </a>
             </div>
 
