--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500" rel="stylesheet"> 
     
     <link href="https://fonts.googleapis.com/css?family=Alex+Brush" rel="stylesheet"><!--  Hochzeit  -->
 
