--- a/index.html
+++ b/index.html
@@ -147,6 +147,34 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
+<!--
+    <div id="nav-love"></div>
+
+    <div class="headline">
+        <h2 class="">HOCHZEIT</h2>
+        <h4 class="widetext">WEDDING IMAGES</h4>
+    </div>
+
+    <div class="block">
+        <div class="instagram-kinastudio-love"></div>
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_love/" target="_blank">Mehr
+            auf Instagram ></a>
+    </div>
+    <script>
+        $('.instagram-kinastudio-love').instagramElement({
+            mode: 'tag',
+            tag: 'kinastudio_love',
+            userID: '2066076364',
+            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
+            galleryMode: 'classic',
+            limit: 12,
+            video: true,
+            showVideoControls: false
+        });
+    </script>
+-->
+
+
     <div id="nav-light"></div>
 
     <div class="headline">
