--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         </div>
         <div class="mainnav">
             <a href="#start" class="desktoplogo-wrapper"><img class="logo desktoplogo" src="images/kina_new5-black.png"/></a>
+            <a href="#wedding" class="menuitem weddinglink">Lovestory & Hochzeit</a>
             <a href="#nav-light" class="menuitem">LOOKING FOR LIGHT</a>
             <a href="#nav-fashion" class="menuitem">FASHION & BEAUTY</a>
             <a href="#nav-business" class="menuitem">BUSINESS LOOKS</a>
-            <a href="hochzeit" class="menuitem weddinglink">Hochzeit</a>
             <a href="#info" class="menuitem">INFO</a>
             <a href="#contact" class="menuitem">KONTAKT</a>
         </div>
@@ -147,23 +147,23 @@
 
     <!-- INSTAGRAM STUFF HERE -->
 
-<!--
-    <div id="nav-love"></div>
+
+    <div id="wedding"></div>
 
     <div class="headline">
-        <h2 class="">HOCHZEIT</h2>
-        <h4 class="widetext">WEDDING IMAGES</h4>
+        <h2 class="">Lovestory & Hochzeit</h2>
+        <h4 class="widetext">Die magischen Momente</h4>
     </div>
 
     <div class="block">
-        <div class="instagram-kinastudio-love"></div>
-        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_love/" target="_blank">Mehr
+        <div class="instagram-kinastudio-wedding"></div>
+        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
             auf Instagram ></a>
     </div>
     <script>
-        $('.instagram-kinastudio-love').instagramElement({
+        $('.instagram-kinastudio-wedding').instagramElement({
             mode: 'tag',
-            tag: 'kinastudio_love',
+            tag: 'kinastudio_wedding',
             userID: '2066076364',
             accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
             galleryMode: 'classic',
@@ -172,7 +172,8 @@
             showVideoControls: false
         });
     </script>
--->
+
+
 
 
     <div id="nav-light"></div>
