--- a/index.html
+++ b/index.html
@@ -100,21 +100,25 @@
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-light">
-                    <img data-u="image" src="photos/slides/00.jpg"/>
+                    <img data-u="image" src="photos/slides/001.jpg"/>
                 </a>
             </div>
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-fashion">
-                    <img data-u="image" src="photos/slides/01.jpg"/>
+                    <img data-u="image" src="photos/slides/002.jpg"/>
                 </a>
             </div>
 
-
+            <div data-p="225.00" style="display: none;">
+                <a href="#nav-business">
+                    <img data-u="image" src="photos/slides/003.jpg"/>
+                </a>
+            </div>
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-business">
-                    <img data-u="image" src="photos/slides/02.jpg"/>
+                    <img data-u="image" src="photos/slides/004.jpg"/>
                 </a>
             </div>
 
