--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     
 
 
-    <!-- SLIDER STUFF HERE -->
+    <!-- START: SLIDER STUFF -->
+
     <div id="jssor_1" class="slider-wrapper" style="">
 
         <div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
@@ -103,18 +104,12 @@
         </div>
         <div data-u="slides" class="slider-slides" style="">
 
-
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-light">
                     <img data-u="image" src="photos/slides/010.jpg"/>
                 </a>
             </div>
 
-            <div data-p="225.00" style="display: none;">
-                <a href="#nav-fashion">
-                    <img data-u="image" src="photos/slides/020.jpg"/>
-                </a>
-            </div>
 
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-business">
@@ -128,20 +123,6 @@
                 </a>
             </div>
 
-<!--
-            <div data-p="225.00" style="display: none;">
-                <a href="#nav-fashion">
-                    <img data-u="image" src="photos/slides/03.jpg"/>
-                </a>
-            </div>
-
-            <div data-p="225.00" style="display: none;">
-                <a href="#contact">
-                    <img data-u="image" src="photos/slides/04.jpg"/>
-                </a>
-            </div>
-            -->
-
         </div>
 
         <div data-u="navigator" class="jssorb05" style="bottom:16px;right:16px;" data-autocenter="1">
@@ -154,70 +135,27 @@
               data-autocenter="2"></span>
     </div>
 
-
-    <!-- INSTAGRAM STUFF HERE -->
-
-
-    <div id="wedding"></div>
-
-    <div class="headline">
-        <h2 class="">Lovestory & Hochzeit</h2>
-        <h4 class="widetext">Die magischen Momente</h4>
-    </div>
-
-    <div class="block">
-        <div class="instagram-kinastudio-wedding"></div>
-        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_wedding/" target="_blank">Mehr
-            auf Instagram ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-wedding').instagramElement({
-            mode: 'tag',
-            tag: 'kinastudio_wedding',
-            userID: '2066076364',
-            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 12,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
+    <!-- END: SLIDER STUFF -->
 
 
 
 
-    <div id="nav-light"></div>
-<!--
-    <div class="headline">
-        <h2 class="">LOOKING FOR LIGHT</h2>
-        <h4 class="widetext">ON LOCATION SHOOTS</h4>
-    </div>
 
-    <div class="block">
-        <div class="instagram-kinastudio-light"></div>
-        <a class="mainbutton" href="https://www.instagram.com/explore/tags/kinastudio_light/" target="_blank">Mehr
-            auf Instagram ></a>
-    </div>
-    <script>
-        $('.instagram-kinastudio-light').instagramElement({
-            mode: 'tag',
-            tag: 'kinastudio_light',
-            userID: '2066076364',
-            accessToken: '2066076364.e029fea.4dbedd300a3648a58c0588998712cb5f',
-            galleryMode: 'classic',
-            limit: 12,
-            video: true,
-            showVideoControls: false
-        });
-    </script>
--->
 
+
+
+
+
+
+
+
+    <!-- START: INSTAGRAM STUFF -->
 
     <div id="nav-fashion"></div>
 
     <div class="headline">
         <h2 class="">FASHION & BEAUTY</h2>
-        <h4 class="widetext">STUDIOLICHT</h4>
+        <h4 class="widetext">PHOTOGRAPHY</h4>
     </div>
 
     <div class="block">
@@ -263,8 +201,21 @@
         });
     </script>
 
-
+    <!-- END: INSTAGRAM STUFF -->
     
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <div id="info"></div>
