--- a/index.html
+++ b/index.html
@@ -110,16 +110,10 @@
                 </a>
             </div>
 
-<!--
+            <!--
             <div data-p="225.00" style="display: none;">
                 <a href="#nav-business">
                     <img data-u="image" src="photos/slides/020.jpg"/>
-                </a>
-            </div>
-
-            <div data-p="225.00" style="display: none;">
-                <a href="#nav-business">
-                    <img data-u="image" src="photos/slides/030.jpg"/>
                 </a>
             </div>
             -->
@@ -182,17 +176,20 @@
         <h2 class="">WEB.APPS</h2>
         <h4 class="widetext bgnude">by kina studio</h4>
     </div>
+
+    <hr/>
+
     <div class="block whitebox infobox">
-        <h4>DESIGN.CONTENT.TRAFFIC</h4>
+        <h4>WIR ENTWICKELN SOFTWARE</h4>
         <p class="info">Wir sind ein kleines Team aus Entwicklern, 
             Designern und anderen IT-Experten. Wir helfen Ihnen gerne 
             bei der Entwicklung einer neuen Webseite, 
-            Web App oder Integration Ihrer Infrastruktur. 
+            Web App oder Integration Ihrer IT-Infrastruktur. 
             Wir haben uns zwar auf E-Commerce Projekte spezialisiert, 
             können Sie sich gerne bei jedem Anlass an uns wenden. 
             Wenn wir Ihnen helfen können, werden wir es auf jeden Fall tun. 
         </p>
-        <h4>WEB.MEDIA</h4>
+        <h4>WEB OPTIMIZED MEDIA</h4>
         <p class="info">
             Alle Fotos und Videos werden speziell für das Web optimiert, so dass die Besucher Ihrer
             Webseite oder Online-Shop durch die schnellen Ladezeiten und volle Farben 
